# travis_poetry

./: .travis.yml  README.rst  pyproject.toml
tests/: test_travis_poetry.py
