[tool.poetry]
name = "travis_poetry"
version = "0.1.0"
description = ""
authors = ["Felipe Aguirre Martinez <felipeam86@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
